[ #403 ] - words overflowing fix

--- a/public/css/masonry.css
+++ b/public/css/masonry.css
@@ -12,6 +12,7 @@
  *----------------------------------------------------------*/
 .strong-content.strong-masonry .wpmtst-testimonial {
 	margin-top: 0;
+	word-wrap: break-word;
 }
 
 /*----------------------------------------------------------
